fix: product service has been edited to avoid modifying the original object