@@ -1,7 +1,6 @@
 package com.jfbarahonag.di.app.springboot_di.services;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.jfbarahonag.di.app.springboot_di.models.Product;
 import com.jfbarahonag.di.app.springboot_di.repositories.ProductRepository;
@@ -13,13 +12,14 @@ public class ProductService {
   public List<Product> findAll() {
     return repository.findAll().stream()
         .map(product -> {
-          product.setName(product.getName().toUpperCase());
-          product.setPrice(product.getPrice() * (long)1.25);
-          return product;
+          Double newPrice = product.getPrice() * 1.25d;
+          Product updatedProduct = new Product(
+              product.getId(),
+              product.getName().toUpperCase(),
+              newPrice.longValue());
+          return updatedProduct;
         })
-        .collect(Collectors.toList());
-        // TODO: Check if this is needed
-        // .toList();
+        .toList();
   }
 
   public Product findById(Long id) {
